@@ -1,5 +1,6 @@
 CHANGELOG
 
+2014-11-25: Add social network preferences.
 2014-11-16: qepHom vocabulary related to: ranks, computers, knots, quantum mechanics, The Klingon Art of War.
 2014-11-12: qepHom vocabulary related to geometry and card games.
 2014-10-23: Audio complete for TTS engine.
